--- a/Infrastructure/SBMS.Core.Infrastructure.csproj
+++ b/Infrastructure/SBMS.Core.Infrastructure.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\SBMS.Core.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
